Fix expand/collapse behaviour

--- a/css/master.css
+++ b/css/master.css
@@ -144,7 +144,7 @@ li:hover .skill-rating {
   font-weight: 200;
 }
 
-.collapseAll {
+.hide {
   display: none;
 }
 
